Meeting invitation .ics event importer should visually differentiate invisible calendars among possible choices
Same as in the event editor dialog: it should still be possible to import a .ics event into a calendar that is not currently visible/shown/displayed in the main window's views, but we should make that clear visually.